kustomization/overlays/prod/paperless/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: auth-forwardauth-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: paperless-ingress
spec:
  rules:
    - host: paperless.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: paperless-svc
                port:
                  name: http
            path: /
            pathType: Prefix
